--- a/requirements.txt
+++ b/requirements.txt
@@ -1,2 +1,10 @@
 nltk==3.4.1
 six==1.12.0
+entrypoints==0.3
+flake8==3.7.7
+mccabe==0.6.1
+nltk==3.4.1
+pycodestyle==2.5.0
+pyflakes==2.1.1
+six==1.12.0
+uWSGI==2.0.18
